tabela isi da resize mai bine

--- a/backend/templates/rezultate.html
+++ b/backend/templates/rezultate.html
@@ -89,7 +89,7 @@
                           
   
                           <!-- Container chart -->
-                          <div>
+                          <div style="height:500px">
 
                               <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                               <canvas id="chart_voturi">
@@ -97,8 +97,7 @@
                           </div>
 
                           <!-- Sort toggle button -->
-                          <!-- Butonul de toggle ar trebui sa fie sub tabel, in centru -->
-                          <!-- Cand e gata css-ul, da-mi mesaj sa-i bag js -->
+
 
                           <h5>Detalii</h5>
                           <div id="continutRezultate_detalii">
