Pagina rezultate CSS toggle box

--- a/backend/templates/rezultate.html
+++ b/backend/templates/rezultate.html
@@ -97,7 +97,20 @@
                           </div>
 
                           <!-- Sort toggle button -->
+                          <div class="sort_toggle_container">
+                            <label class="sort_toggle" for="sortAlfabetic">
+                              <input class="sort_toggle_input" type="checkbox" id="sortAlfabetic">
+                              <div class="sort_toggle_fill"></div>
+                            </label>
+                            <span class="sort_toggle_text">Ordonează după nume</span>
+                            <br>
 
+                            <label class="sort_toggle" for="sortOrdine">
+                              <input class="sort_toggle_input" type="checkbox" id="sortOrdine">
+                              <div class="sort_toggle_fill"></div>
+                            </label>
+                            <span class="sort_toggle_text">Ordonează descrescător</span>
+                          </div>
 
                           <h5>Detalii</h5>
                           <div id="continutRezultate_detalii">
