--- a/backend/templates/Votare.html
+++ b/backend/templates/Votare.html
@@ -133,7 +133,7 @@
                 {% for i in entry.opList %}
                    <!-- <li>{{i}}</li> -->
                    <label class="container">{{i}}
-                    <input type="radio" checked="checked" name="radio">
+                    <input type="radio" checked="checked" name="optiuneVot" value="{{i}}">
                     <span class="checkmark"></span>
                   </label>
                 {% endfor %}
@@ -181,7 +181,10 @@
   <script>
     $("input:radio").change(function () { $("#Voteaza").prop("disabled", false); });
   </script> <!-- Dezactiveaza butonul pana la selectia unei optiuni din lista -->
- 
+  <script
+  type="text/javascript"
+  src="../static/js/jsfrontend/votare.js"
+  ></script>
   <script type="text/javascript">
     var voteCod = "{{ entry.poolId }}";
   </script>
