--- a/backend/templates/Votare.html
+++ b/backend/templates/Votare.html
@@ -133,7 +133,7 @@
                 {% for i in entry.opList %}
                    <!-- <li>{{i}}</li> -->
                    <label class="container">{{i}}
-                    <input type="radio" checked="checked" name="optiuneVot" value="{{i}}">
+                    <input type="radio"  name="optiuneVot" value="{{i}}">
                     <span class="checkmark"></span>
                   </label>
                 {% endfor %}
