--- a/backend/templates/Votare.html
+++ b/backend/templates/Votare.html
@@ -121,7 +121,7 @@
           <div id="listavotare">
             <div id="detaliivot">
               <label for="titluVot" class="sr-only">Titlu</label>
-              <input type="text" class="form-control-plaintext" id="titluVot" readonly disabled>
+              <input type="text" class="form-control-plaintext" id="titluVot" readonly="enable">
               <script>
                 var votTitle = "{{entry.title}}";
                 document.getElementById("titluVot").value = votTitle;
