--- a/backend/templates/newPoll.html
+++ b/backend/templates/newPoll.html
@@ -100,17 +100,20 @@
                       <div class="vot">
                         <form style="width: 350px" onsubmit="return false;">
                           <div class="form-group">
-                            <label for="titluPoll" class="voteOpt">Titlu</label>
+                            <label for="titluPoll" class="voteOpt" >Titlu</label>
                             <input
                               type="text"
                               id="titluPoll"
                               class="form-control"
                               name="PollTitle"
                               placeholder="Titlu"
+                              maxlength="35"
                             />
                           </div>
                           <div class="form-group optionsSCR">
-                            <ol class="lista"></ol>
+                            <ol class="lista">
+
+                            </ol>
                           </div>
                           <div class="formbutoane">
                             <div class="inputopt">
